  * fam.c: update all documentation to describe exceptions

* Sat Jul 10 19:54:16 2004, pabs <pabs@pablotron.org>
  * README: minor updates
  * re-added event_codes.txt

* Sat Jul 10 19:56:30 2004, pabs <pabs@pablotron.org>
  * MANIFEST: updated to reflect event_codes.txt
  * releasing 0.1.4

* Wed Aug 25 00:32:05 2004, pabs <pabs@pablotron.org>
  * added fam.gemspec

* Wed Aug 25 01:41:34 2004, pabs <pabs@pablotron.org>
  * fam.gemspec: added CVS to rdoc options

* Wed Aug 25 02:16:56 2004, pabs <pabs@pablotron.org>
  * fam.gemspec: removed --ri-site, added --title (rdoc opts)

* Tue Dec 05 00:29:29 2006, pabs <pabs@pablotron.org>
  * extconf.rb: check for FAMDebugLevel (patch from dlutter@redhat.com)
  * fam.c: check for FAM_DEBUG_{OFF|ON} (patch from dlutter@redhat.com)
  * fam.c: don't fail if debug_level isn't supported
  * examples/famtest.rb: don't fail if Fam#suspend isn't supported
    (also a patch from dlutter@redhat.com)
  * fam.c: don't define Fam#debug if HAVE_FAMDEBUGLEVEL isn't set (lets
    you test for fam.respond_to?(:debug) instead of guessing what might
    happen
  * fam.c: switch from FamMonitorDir2() to FamMonitorDir(); the latter
    doesn't leak requests.
  * fam.c: added conditional support for Gamin-specific FamNoExists()
    (patch from dlutter@redhat.com)

* Tue Dec  5 00:52:47 EST 2006, Paul Duncan <pabs@pablotron.org>
  * AUTHORS: added David Lutterkort
  * COPYING: updated year to 2006
  * MANIFEST: removed CVS entries
  * README: added note about Gamin
  * README: updated version to 0.2.0
  * fam.c: updated version to 0.2.0

* Tue Dec  5 01:25:18 EST 2006, Paul Duncan <pabs@pablotron.org>
  * README: added section about Gamin support
  * extconf.rb: check for monitor functions
  * fam.c: added note about Gamin behavior to Fam::Connection#suspend,
    Fam::Connection#resume, and Fam##Connection#monitor_collection

* Tue Dec  5 01:28:17 EST 2006, Paul Duncan <pabs@pablotron.org>
  * README: slightly re-worded Gamin section